<resources>
    <string name="app_name">Tip Calculator</string>

    <string name="enter_amount">Enter Bill Amount: </string>
    <string name="select_tip">Select Tip:</string>
    <string name="tip_label">Tip: </string>
    <string name="total_label">Total: </string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="twenty_percent">20%</string>
    <string name="money_default">$0.00</string>
    <string name="send_receipt">Send Receipt</string>
    <string name="send_email">Send Email</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_email">Email</string>
    <string name="recipients">Recipients:</string>
    <string name="subject">Subject:</string>
    <string name="body">Body:</string>

</resources>
