<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.clintonmedbery.tipcalculator.Email"
    android:background="@color/bgColor"
    android:id="@+id/emailLayout">

    <TableRow>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/recipients"
            android:id="@+id/recipientsLabel"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />

    </TableRow>
    <TableRow>
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/recipientsText"
            android:layout_below="@+id/subjectLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:backgroundTint="@color/textColor"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:id="@+id/subjectLabel"
            android:layout_column="1"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/subjectText"
            android:backgroundTint="@color/textColor"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/body"
            android:id="@+id/bodyLabel"
            android:layout_column="1"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/bodyText"

            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size"
            android:backgroundTint="@color/textColor" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/send"
            android:onClick="send"
            android:text="@string/send_email"
            android:textColor="@color/textColor"
            android:background="@color/button_background"
            android:textSize="@dimen/text_size"
            android:focusable="false"
            android:nestedScrollingEnabled="false" />
    </TableRow>


</TableLayout>
